--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1>this is the index page</h1>
-<h2>welcome to git tatining</h2>
+<h1>Welcome to CAR rent-app</h1>
+<p>we provide cars on rent on hourly basis</p>
+<h3>comming soon</h3>
