--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Welcome to CAR rent-app</h1>
 <p>we provide cars on rent on hourly basis</p>
-<h3>we are coming on 1st feb 2022</h3>
+<h1>we are coming on 1st feb 2022 with great deals</h1>
