added promo code

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>Welcome to CAR rent-app</h1>
 <p>we provide cars on rent on hourly basis</p>
-<h1>we are coming on 1st feb 2022 with great deals</h1>
+<h1>we are coming on 1st feb 2022 with great deals</h1></br>
+<h3>use promocode</h3><h1>launch2020</h1><h3>to avail 600 Rs of on all deals</h3>
+
