added copy rights

--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 <h1>we are coming on 1st feb 2022 with great deals</h1></br>
 <h3>use promocode</h3><h1>launch2020</h1><h3>to avail 600 Rs of on all deals</h3>
 <h1>hurry up!!!<h1>
-<h3>this is limited offer only</h3>
+<h3>this is limited offer only</h3></br>
+</p>copy rights belongs to rent-app limited</p>
